2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai) 
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_kamada_kawai)
	(R_igraph_layout_kamada_kawai_3d, R_igraph_layout_fruchterman_reingold_grid)
	(R_igraph_layout_fruchterman_reingold) : initial position support

	* interfaces/R/igraph/R/layout.R (layout.graphopt) 
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_graphopt) : added

	* interfaces/R/igraph/R/plot.R (plot.igraph)
	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 'frame' added

	* interfaces/R/igraph/R/centrality.R (arpack) : added
	* interfaces/R/src/rinterface.c.in (R_igraph_arpack) : added

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community.step) :
	updated
	* interfaces/R/src/rinterface.c.in 
	(R_igraph_community_leading_eigenvector_step) : removed, generated by 
	stimulus

2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) 
	* interfaces/R/src/rinterface.c.in (R_igraph_community_leading_eigenvector)
	: removed, generated by stimulus

2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_bliss_info_to_SEXP) : added

2007-12-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/CohesiveBlocks.R : updates, bugfix in kCutsets,
	cleanup

2007-12-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/print.R (print.igraph) : better printing of
	attributes

	* interfaces/R/igraph/R/CohesiveBlocks.R (max.cohesion, maxcohesion) : 
	renamed

	* interface/R/igraph/R/CohesiveBlocks.R (layout.byblock, dyadAsymmetry) :
	removed
	(cohesive.blocks, recalc.tree.bgraph, print.bgraph, plot.bgraph) :
	many small modifications
	(is.bgraph) : added
	
	* interfaces/R/igraph/R/CohesiveBlocks.R 
	* interfaces/R/igraph/R/layout.R (layout.mds, layout.svd)
	(piecewise.layout) : moved
