@@ -254,7 +254,8 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            label.family="serif",
                            label.font=1,
                            label.cex=1,
-                           frame.color="black"),                           
+                           frame.color="black",
+                           shape="circle"),
                          edge=list(color="darkgrey",
                            label=i.get.edge.labels,
                            lty=1,
